--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
       <ul class="options">
         <li class="btns">
           <button id="btn-start">Start</button>
+        </li>
+        <li class="btns">
           <button id="btn-stop">Stop</button>
+        </li>
+        <li class="btns">
           <button id="btn-reset">Reset</button>
         </li>
       </ul>
